# legalbenchpro

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/metadata/: cn_judgments_index.csv  dataset_summary.json  model_configurations.csv  public_exam_index.csv  source_distribution.csv
data/sample/: legalbenchpro_cn_judgments_sample.csv  legalbenchpro_public_exam_sample.csv  legalbenchpro_public_sample.csv  preview_cases.md  preview_tables.md
docs/: AI_WORKFLOW.md  ANNOTATION_PROTOCOL.md  APPLICATION_POSITIONING.md  DATA_CARD.md  MANUSCRIPT_STATUS.md  SCORING_RUBRIC.md
paper/: introduction_revised.tex  manuscript_working_draft.md
scripts/: extract_public_sample.py  render_benchmark_overview.py  render_research_snapshot.py
src/legalbenchpro/: __init__.py  workbook.py
tests/: test_workbook.py
